[tool.poetry]
name = "update-feast"
version = "0.1.0"
description = "A project to update Feast"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
setuptools = ">=60"
wheel = "*"
setuptools_scm = ">=6.2"
grpcio = "*"
grpcio-tools = ">=1.47.0"
mypy-protobuf = "==3.1"
sphinx = "!=4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools_scm]
# Including this section is comparable to supplying use_scm_version=True in setup.py.

[tool.ruff]
line-length = 88
target-version = "py39"
include = ["*.py", "*.pyi"]

[tool.ruff.format]
# exclude a few common directories in the root of the project
exclude = [ 
  ".eggs", 
  ".git", 
  ".hg", 
  ".mypy_cache",
  ".tox", 
  ".venv", 
  "_build", 
  "buck-out",
  "build",
  "dist",
  "pb2.py",
  ".pyi",
  "protos",
  "sdk/python/feast/embedded_go/lib"]
